how-to-deploy/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: alerts
  namespace: test
  labels:
    k8s-app: alerts
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: web
  selector:
    k8s-app: alerts
